--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -4,9 +4,12 @@
 @import "./components/header.scss";
 @import "./components/banner.scss";
 @import "./components/cases.scss";
+@import "./components/introOverlay.scss";
+@import "./components/navigation.scss";
 
 body,
 html {
+  visibility: hidden;
   user-select: none;
   background: $white;
   overscroll-behavior: none;
@@ -57,5 +60,22 @@ html {
   .row {
     display: flex;
     height: 100%;
+  }
+}
+
+.app {
+  z-index: 2;
+  transform: translateY(0);
+  position: relative
+}
+
+.page {
+  height: 100vh;
+  width: 100%;
+  background-color: $white;
+
+  .row {
+    display: flex;
+    align-items: center;
   }
 }
